--- a/css/index.css
+++ b/css/index.css
@@ -47,25 +47,93 @@
     width: 210px;
     height: 96px;
     float: left;
-    /* line-height: 0px; */
 }
 
 #search .search_content .logo a img {
     /* margin-top: 27px; */
-    /* line-height: 0px; */
-    /* vertical-align: bottom; */
+    vertical-align: middle;
 }
 
 #search .search_content .searchform {
     width: 750px;
     height: 96px;
-    background-color: blue;
     float: left;
+    line-height: 96px;
 }
 
 #search .search_content .shoppingcar {
     width: 144px;
     height: 96px;
     float: right;
-    background-color: orange;
+}
+
+#search .search_content .shoppingcar a {
+    width: 142px;
+    height: 34px;
+    display: block;
+    border: 1px solid red;
+    text-align: center;
+    line-height: 34px;
+    margin-top: 31px;
+}
+
+#searchtext {
+    width: 592px;
+    height: 38px;
+    border: 0px;
+    padding: 0px 10px;
+    outline: none;
+    background: url(../images/searchtext_bg.png) no-repeat 0 center;
+}
+
+#searchbtn {
+    width: 122px;
+    height: 38px;
+    border: 0;
+    padding: 0;
+    background-color: red;
+    color: white;
+    outline: none;
+}
+
+/* 导航栏部分样式设置 */
+#nav {
+    width: 100%;
+    height: 42px;
+    background-color: black;
+}
+
+#nav .nav_content {
+    width: 1200px;
+    height: 42px;
+    margin: 0px auto;
+}
+
+#nav .nav_content .allclass {
+    width: 210px;
+    height: 42px;
+    line-height: 42px;
+    text-align: center;
+    background-color: red;
+    color: white;
+    font-size: 15px;
+    float: left;
+}
+
+#nav .nav_content .nav_items {
+    width: 960px;
+    height: 42px;
+    line-height: 42px;
+    float: left;
+    padding-left: 30px;
+}
+
+#nav .nav_content .nav_items li {
+    float: left;
+    padding-right: 39px;
+}
+
+#nav .nav_content .nav_items li a{
+    color: white;
+    font-weight: bold;
 }
