--- a/css/index.css
+++ b/css/index.css
@@ -107,6 +107,7 @@
     width: 1200px;
     height: 42px;
     margin: 0px auto;
+    position: relative;
 }
 
 #nav .nav_content .allclass {
@@ -133,7 +134,45 @@
     padding-right: 39px;
 }
 
-#nav .nav_content .nav_items li a{
+#nav .nav_content .nav_items li a {
     color: white;
     font-weight: bold;
+}
+
+#nav .nav_content .allclass_content {
+    width: 210px;
+    height: 500px;
+    position: absolute;
+    top: 42px;
+    left: 0px;
+    background: white;
+    filter: alpha(Opacity=96);
+	-moz-opacity: 0.96;
+	opacity: 0.96;
+}
+
+#nav .nav_content .allclass_content ul {
+    width: 180px;
+    margin-left: 10px;
+}
+
+#nav .nav_content .allclass_content li {
+    width: 180px;
+    height: 40px;
+    padding-top: 30px;
+}
+
+#nav .nav_content .allclass_content li a {
+    display: block;
+    margin-top: 10px;
+}
+
+#nav .nav_content .allclass_content li a em {
+    float: right;
+}
+
+#carousel {
+    width: 100%;
+    height: 500px;
+    background: url('../images/carouselimg.png') no-repeat center center;
 }
